[workspace]
resolver = "2"
members = ["crates/rapiere-lexer", "crates/simulator"]

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["Romain Failla <rigbuntu@gmail.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
rstest = { version = "0.24.0", default-features = false, features = ["crate-name"] }
thiserror = "2"
