[package]
name = "rapiere-lexer"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "rapiere_lexer"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc", "std"] }

[dev-dependencies]
rstest.workspace = true
