[package]
name = "simulator"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anarchist-readable-name-generator-lib = "0.1"
clap = { version = "4.5", default-features = false, features = ["derive", "help", "std", "unicode"] }
rand = "0.8"
rand_chacha = "0.3"
rapiere-lexer = { path = "../rapiere-lexer" }
tracing = "0.1"
tracing-subscriber = "0.3"
