[package]
name = "simulator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Deterministic simulator used to test various scenarii on `rapiere` ecosystem"
publish = false

[dependencies]
anarchist-readable-name-generator-lib = "0.1"
clap = { version = "4.5", default-features = false, features = [
  "derive",
  "help",
  "std",
  "unicode",
  "usage",
] }
rand = "0.9"
rand_chacha = "0.9"
rapiere-lexer = { path = "../rapiere-lexer" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
